tests/baselines/reference/ClassDeclaration10.errors.txt
==== tests/cases/compiler/ClassDeclaration10.ts (1 errors) ====
    class C {
       constructor();
       foo();
       ~~~
!!! ClassDeclaration10.ts(3,4): error TS2240: Constructor implementation expected.
    }